Fixed z-index on orderDetails.css

--- a/frontend/src/components/userDashboard/Pages/OrderDetails/orderDetailsStyle.css
+++ b/frontend/src/components/userDashboard/Pages/OrderDetails/orderDetailsStyle.css
@@ -72,7 +72,7 @@
     background: #0f3460;
     color: aliceblue;
     border-radius: 50%;
-    z-index: 11111;
+    z-index: 111;
 }
 
 
